# ui-build-compression

./: .gitignore  .npmignore  .oxfmtrc.json  .oxlintrc.json  Cargo.toml  README.md  install.sh  package.json  tsconfig.json
internals/: main.rs
internals/compress/: compressor.rs
internals/concurrency/: thread_pool.rs
internals/logger/: logger.rs
src/: lib.rs  main.rs
src/compress/: compressor.rs
